You can now add and remove users.

--- a/software/data_files/html/ssi/header.html
+++ b/software/data_files/html/ssi/header.html
@@ -55,6 +55,9 @@
                             <a class="pure-menu-link" href="device_info.html">Device Info</a>
                         </li>
                         <li class="pure-menu-item">
+                            <a class="pure-menu-link" href="users.html">Users</a>
+                        </li>
+                        <li class="pure-menu-item">
                             <a class="pure-menu-link" href="login.html">Login</a>
                         </li>
                         <li class="pure-menu-item">
